[package]
name = "clap-completion-example"
version = "0.1.0+step-3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
clap_complete = "3.0.2"

[dev-dependencies]
assert_cmd = "2.0.2"
rstest = "0.12.0"